<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Title -->
    <TextView
        android:id="@+id/calculatorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator_title"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- First Number -->
    <EditText
        android:id="@+id/firstNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_number"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/calculatorTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

    <!-- Second Number -->
    <EditText
        android:id="@+id/secondNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_second_number"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/firstNumberEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

    <!-- Put buttons into a horizontal (sausage) chain: https://stackoverflow.com/questions/56565195/layout-constraintwidth-default-wrap-is-deprecated-any-alternative -->
    <!-- Add button -->
    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition_symbol"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/secondNumberEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/subtractButton"
        android:layout_marginTop="24dp" />

    <!-- Subtract button -->
    <Button
        android:id="@+id/subtractButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtraction_symbol"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintTop_toBottomOf="@id/secondNumberEditText"
        app:layout_constraintStart_toEndOf="@id/addButton"
        app:layout_constraintEnd_toStartOf="@id/multiplyButton"
        android:layout_marginTop="24dp" />

    <!-- Multiply button -->
    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplication_symbol"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintTop_toBottomOf="@id/secondNumberEditText"
        app:layout_constraintStart_toEndOf="@id/subtractButton"
        app:layout_constraintEnd_toStartOf="@id/divideButton"
        android:layout_marginTop="24dp" />

    <!-- Divide button -->
    <Button
        android:id="@+id/divideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division_symbol"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintTop_toBottomOf="@id/secondNumberEditText"
        app:layout_constraintStart_toEndOf="@id/multiplyButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
